--- a/src/App.css
+++ b/src/App.css
@@ -1733,10 +1733,17 @@ button {
     text-align: center;
     justify-content: space-around;
     margin: 4%;
+    display: none;
   }
-
+.navPhones{
+  display: none;
+}
+  .navbar ul li{
+    display: none;
+  }
   .navbar ul li a {
     margin: 5px;
+    display: none;
   }
 
   .navbar h1 a {
